--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-    <div class="hoge"></div>
-    <div class="back"></div>
+    <div class="panel">
+      <div class="T object">T</div>
+      <div class="back"></div>
+    </div>
   </body>
 </html>
