--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="panel">
-      <div class="T object">T</div>
+      <div class="T object word">T</div>
       <div class="back"></div>
     </div>
   </body>
