--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <div class="panel">
       <div class="T object word">T</div>
+      <div class="O object word">O</div>
       <div class="back"></div>
     </div>
   </body>
