--- a/index.html
+++ b/index.html
@@ -5,9 +5,54 @@
   </head>
   <body>
     <div class="panel">
-      <div class="T object word">T</div>
-      <div class="O object word">O</div>
+      <div class="T1 object word">T</div>
+      <div class="O1 object word">O</div>
+      <div class="K1 object word">K</div>
+      <div class="Y1 object word">Y</div>
+      <div class="O2 object word">O</div>
+
+
+      <div class="U1 object word">U</div>
+      <div class="N1 object word">N</div>
+      <div class="I1 object word">I</div>
+      <div class="V1 object word">V</div>
+      <div class="E1 object word">E</div>
+      <div class="R1 object word">R</div>
+      <div class="S1 object word">S</div>
+      <div class="I2 object word">I</div>
+      <div class="T2 object word">T</div>
+      <div class="Y2 object word">Y</div>
+
+      <div class="O3 object word">O</div>
+      <div class="F1 object word">F</div>
+
+      <div class="S2 object word">S</div>
+      <div class="C1 object word">C</div>
+      <div class="I3 object word">I</div>
+      <div class="E2 object word">E</div>
+      <div class="N2 object word">N</div>
+      <div class="C2 object word">C</div>
+      <div class="E3 object word">E</div>
+
+      <div class="s1 object word">s</div>
+      <div class="i1 object word">i</div>
+      <div class="n1 object word">n</div>
+      <div class="c1 object word">c</div>
+      <div class="e1 object word">e</div>
+      <div class="num1-1 object word">1</div>
+      <div class="num8-1 object word">8</div>
+      <div class="num8-2 object word">8</div>
+      <div class="num1-2 object word">1</div>
+      <div class="12 object word">1</div>
+
+
       <div class="back"></div>
+      <div class="circle"></div>
+      <div class="arc-r object"></div>
+      <div class="arc-l object"></div>
+      <div class="arc-t object"></div>
+      <div class="arc-b object"></div>
+      <div class="bigCircle"></div>
     </div>
   </body>
 </html>
