--- a/index.html
+++ b/index.html
@@ -5,54 +5,65 @@
   </head>
   <body>
     <div class="panel">
-      <div class="T1 object word">T</div>
-      <div class="O1 object word">O</div>
-      <div class="K1 object word">K</div>
-      <div class="Y1 object word">Y</div>
-      <div class="O2 object word">O</div>
+      <div class="color T1 object word">T</div>
+      <div class="color O1 object word">O</div>
+      <div class="color K1 object word">K</div>
+      <div class="color Y1 object word">Y</div>
+      <div class="color O2 object word">O</div>
 
 
-      <div class="U1 object word">U</div>
-      <div class="N1 object word">N</div>
-      <div class="I1 object word">I</div>
-      <div class="V1 object word">V</div>
-      <div class="E1 object word">E</div>
-      <div class="R1 object word">R</div>
-      <div class="S1 object word">S</div>
-      <div class="I2 object word">I</div>
-      <div class="T2 object word">T</div>
-      <div class="Y2 object word">Y</div>
+      <div class="color U1 object word">U</div>
+      <div class="color N1 object word">N</div>
+      <div class="color I1 object word">I</div>
+      <div class="color V1 object word">V</div>
+      <div class="color E1 object word">E</div>
+      <div class="color R1 object word">R</div>
+      <div class="color S1 object word">S</div>
+      <div class="color I2 object word">I</div>
+      <div class="color T2 object word">T</div>
+      <div class="color Y2 object word">Y</div>
 
-      <div class="O3 object word">O</div>
-      <div class="F1 object word">F</div>
+      <div class="color O3 object word">O</div>
+      <div class="color F1 object word">F</div>
 
-      <div class="S2 object word">S</div>
-      <div class="C1 object word">C</div>
-      <div class="I3 object word">I</div>
-      <div class="E2 object word">E</div>
-      <div class="N2 object word">N</div>
-      <div class="C2 object word">C</div>
-      <div class="E3 object word">E</div>
+      <div class="color S2 object word">S</div>
+      <div class="color C1 object word">C</div>
+      <div class="color I3 object word">I</div>
+      <div class="color E2 object word">E</div>
+      <div class="color N2 object word">N</div>
+      <div class="color C2 object word">C</div>
+      <div class="color E3 object word">E</div>
 
-      <div class="s1 object word">s</div>
-      <div class="i1 object word">i</div>
-      <div class="n1 object word">n</div>
-      <div class="c1 object word">c</div>
-      <div class="e1 object word">e</div>
-      <div class="num1-1 object word">1</div>
-      <div class="num8-1 object word">8</div>
-      <div class="num8-2 object word">8</div>
-      <div class="num1-2 object word">1</div>
-      <div class="12 object word">1</div>
+      <div class="color s1 object word">s</div>
+      <div class="color i1 object word">i</div>
+      <div class="color n1 object word">n</div>
+      <div class="color c1 object word">c</div>
+      <div class="color e1 object word">e</div>
+      <div class="color num1-1 object word">1</div>
+      <div class="color num8-1 object word">8</div>
+      <div class="color num8-2 object word">8</div>
+      <div class="color num1-2 object word">1</div>
 
 
-      <div class="back"></div>
-      <div class="circle"></div>
-      <div class="arc-r object"></div>
-      <div class="arc-l object"></div>
-      <div class="arc-t object"></div>
-      <div class="arc-b object"></div>
-      <div class="bigCircle"></div>
+      <div class="color back"></div>
+      <div class="color circle bg-color"></div>
+      <div class="color arc-r object"></div>
+      <div class="color arc-l object"></div>
+      <div class="color arc-t object"></div>
+      <div class="color arc-b object"></div>
+      <div class="color bigCircle"></div>
+      <div class="color taihei-c-r">
+        <div class="color taihei"></div>
+      </div>
+      <div class="color taihei-c-l">
+        <div class="color taihei"></div>
+      </div>
+      <div class="color taihei-c-t">
+        <div class="color taihei"></div>
+      </div>
+      <div class="color taihei-c-b">
+        <div class="color taihei"></div>
+      </div>
     </div>
   </body>
 </html>
