--- a/index.html
+++ b/index.html
@@ -5,64 +5,64 @@
   </head>
   <body>
     <div class="panel">
-      <div class="color T1 object word">T</div>
-      <div class="color O1 object word">O</div>
-      <div class="color K1 object word">K</div>
-      <div class="color Y1 object word">Y</div>
-      <div class="color O2 object word">O</div>
+      <div class="color1 T1 object word">T</div>
+      <div class="color2 O1 object word">O</div>
+      <div class="color3 K1 object word">K</div>
+      <div class="color4 Y1 object word">Y</div>
+      <div class="color5 O2 object word">O</div>
 
 
-      <div class="color U1 object word">U</div>
-      <div class="color N1 object word">N</div>
-      <div class="color I1 object word">I</div>
-      <div class="color V1 object word">V</div>
-      <div class="color E1 object word">E</div>
-      <div class="color R1 object word">R</div>
-      <div class="color S1 object word">S</div>
-      <div class="color I2 object word">I</div>
-      <div class="color T2 object word">T</div>
-      <div class="color Y2 object word">Y</div>
+      <div class="color6 U1 object word">U</div>
+      <div class="color7 N1 object word">N</div>
+      <div class="color8 I1 object word">I</div>
+      <div class="color9 V1 object word">V</div>
+      <div class="color10 E1 object word">E</div>
+      <div class="color11 R1 object word">R</div>
+      <div class="color12 S1 object word">S</div>
+      <div class="color13 I2 object word">I</div>
+      <div class="color14 T2 object word">T</div>
+      <div class="color15 Y2 object word">Y</div>
 
-      <div class="color O3 object word">O</div>
-      <div class="color F1 object word">F</div>
+      <div class="color16 O3 object word">O</div>
+      <div class="color17 F1 object word">F</div>
 
-      <div class="color S2 object word">S</div>
-      <div class="color C1 object word">C</div>
-      <div class="color I3 object word">I</div>
-      <div class="color E2 object word">E</div>
-      <div class="color N2 object word">N</div>
-      <div class="color C2 object word">C</div>
-      <div class="color E3 object word">E</div>
+      <div class="color18 S2 object word">S</div>
+      <div class="color19 C1 object word">C</div>
+      <div class="color20 I3 object word">I</div>
+      <div class="color21 E2 object word">E</div>
+      <div class="color22 N2 object word">N</div>
+      <div class="color23 C2 object word">C</div>
+      <div class="color24 E3 object word">E</div>
 
-      <div class="color s1 object word">s</div>
-      <div class="color i1 object word">i</div>
-      <div class="color n1 object word">n</div>
-      <div class="color c1 object word">c</div>
-      <div class="color e1 object word">e</div>
-      <div class="color num1-1 object word">1</div>
-      <div class="color num8-1 object word">8</div>
-      <div class="color num8-2 object word">8</div>
-      <div class="color num1-2 object word">1</div>
+      <div class="color23 s1 object word">s</div>
+      <div class="color22 i1 object word">i</div>
+      <div class="color21 n1 object word">n</div>
+      <div class="color20 c1 object word">c</div>
+      <div class="color19 e1 object word">e</div>
+      <div class="color18 num1-1 object word">1</div>
+      <div class="color17 num8-1 object word">8</div>
+      <div class="color16 num8-2 object word">8</div>
+      <div class="color15 num1-2 object word">1</div>
 
 
       <div class="color back"></div>
-      <div class="color circle bg-color"></div>
-      <div class="color arc-r object"></div>
-      <div class="color arc-l object"></div>
-      <div class="color arc-t object"></div>
-      <div class="color arc-b object"></div>
-      <div class="color bigCircle"></div>
-      <div class="color taihei-c-r">
-        <div class="color taihei"></div>
+      <div class="circle bg-color"></div>
+      <div class="color14 arc-r object"></div>
+      <div class="color13 arc-l object"></div>
+      <div class="color12 arc-t object"></div>
+      <div class="color11 arc-b object"></div>
+      <div class="color10 bigCircle"></div>
+      <div class="color9 taihei-c-r">
+        <div class="color8 taihei"></div>
       </div>
-      <div class="color taihei-c-l">
-        <div class="color taihei"></div>
+      <div class="color7 taihei-c-l">
+        <div class="color6 taihei"></div>
       </div>
-      <div class="color taihei-c-t">
-        <div class="color taihei"></div>
+      <div class="color5 taihei-c-t">
+        <div class="color4 taihei"></div>
       </div>
-      <div class="color taihei-c-b">
-        <div class="color taihei"></div>
+      <div class="color3 taihei-c-b">
+        <div class="color2 taihei"></div>
       </div>
     </div>
   </body>
