--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="jquery.min.js"></script>
   </head>
   <body>
+    <div class="switch">click</div>
     <div class="panel">
+      <div class="logo">
       <div class="color1 T1 object word">T</div>
       <div class="color2 O1 object word">O</div>
       <div class="color3 K1 object word">K</div>
@@ -34,36 +37,55 @@
       <div class="color23 C2 object word">C</div>
       <div class="color24 E3 object word">E</div>
 
-      <div class="color23 s1 object word">s</div>
-      <div class="color22 i1 object word">i</div>
-      <div class="color21 n1 object word">n</div>
-      <div class="color20 c1 object word">c</div>
-      <div class="color19 e1 object word">e</div>
-      <div class="color18 num1-1 object word">1</div>
-      <div class="color17 num8-1 object word">8</div>
-      <div class="color16 num8-2 object word">8</div>
-      <div class="color15 num1-2 object word">1</div>
+      <div class="color23 num1-1 object word">1</div>
+      <div class="color22 num8-1 object word">8</div>
+      <div class="color21 num8-2 object word">8</div>
+      <div class="color20 num1-2 object word">1</div>
+
+      <div class="color19 s1 object word">s</div>
+      <div class="color18 i1 object word">i</div>
+      <div class="color17 n1 object word">n</div>
+      <div class="color16 c1 object word">c</div>
+      <div class="color15 e1 object word">e</div>
 
 
       <div class="color back"></div>
       <div class="circle bg-color"></div>
-      <div class="color14 arc-r object"></div>
-      <div class="color13 arc-l object"></div>
-      <div class="color12 arc-t object"></div>
-      <div class="color11 arc-b object"></div>
-      <div class="color10 bigCircle"></div>
-      <div class="color9 taihei-c-r">
-        <div class="color8 taihei"></div>
+
+      <div class="arc-c-r">
+        <div class="color25 arc object"></div>
       </div>
-      <div class="color7 taihei-c-l">
-        <div class="color6 taihei"></div>
+       <div class="arc-c-t">
+        <div class="color25 arc object"></div>
       </div>
-      <div class="color5 taihei-c-t">
-        <div class="color4 taihei"></div>
+       <div class="arc-c-l">
+        <div class="color25 arc object"></div>
       </div>
-      <div class="color3 taihei-c-b">
-        <div class="color2 taihei"></div>
+       <div class="arc-c-b">
+        <div class="color25 arc object"></div>
       </div>
+
+
+      <div class="color25 bigCircle"></div>
+      <div class="color25 taihei-c-r">
+        <div class="color25 taihei"></div>
+      </div>
+      <div class="color25 taihei-c-l">
+        <div class="color25 taihei"></div>
+      </div>
+      <div class="color25 taihei-c-t">
+        <div class="color25 taihei"></div>
+      </div>
+      <div class="color25 taihei-c-b">
+        <div class="color25 taihei"></div>
+      </div>
+      <div class="clear"></div>
     </div>
+    <script>
+      $(".switch").on("click", function(){
+        console.log("hoge");
+        $("body").toggleClass("white");
+      })
+    </script>
   </body>
 </html>
